tests-integration/fixtures/checking/089_no_instance_found/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
eq :: forall (a :: Type). Eq (a :: Type) => (a :: Type) -> (a :: Type) -> Boolean
Foo :: Foo
test :: Foo -> Boolean

Types
Eq :: Type -> Constraint
Foo :: Type

Data
Foo
  Quantified = :0
  Kind = :0


Roles
Foo = []

Classes
class Eq (a :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq Foo
  --> 9:1..9:23
  |
9 | test :: Foo -> Boolean
  | ^~~~~~~~~~~~~~~~~~~~~~
